Headless Parallel executtion update